--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=9000
-MONGO_URL = mongodb://localhost:27017/blogDB
+# MONGO_URL = mongodb://localhost:27017/blogDB
+MONGO_URL = mongodb+srv://kumarmukteshwar:kumar%40123@cluster0.wh36p0t.mongodb.net/blogDB?retryWrites=true&w=majority
 JWT_SECRET= "Kumar"
